[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/roboto_mono_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=2]
[ext_resource path="res://assets/buttons/restart_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/to_title_btn.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/restart_btn_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/to_title_btn_hover.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0.556863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 450.0
margin_top = 270.0
margin_right = 870.0
margin_bottom = 363.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="."]
margin_left = 421.0
margin_top = 360.0
margin_right = 886.0
margin_bottom = 394.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score: ### | Enemies Killed: ##"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 421.0
margin_top = 250.0
margin_right = 886.0
margin_bottom = 284.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "NEW HIGH SCORE!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 545.0
margin_top = 417.0
margin_right = 630.0
margin_bottom = 502.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyHint1" type="Label" parent="."]
margin_left = 564.0
margin_top = 503.0
margin_right = 614.0
margin_bottom = 525.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton" type="TextureButton" parent="."]
margin_left = 650.0
margin_top = 417.0
margin_right = 735.0
margin_bottom = 502.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyHint2" type="Label" parent="."]
margin_left = 664.0
margin_top = 503.0
margin_right = 724.0
margin_bottom = 525.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "ESCAPE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="RestartButton" to="." method="_on_restartPressed"]
[connection signal="pressed" from="TitleButton" to="." method="_on_titlePressed"]
